# dtu-env

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  recipe.yaml
.github/workflows/: publish.yml  release.yml  update-environments.yml
scripts/: update_environments.py
src/dtu_env/: __init__.py  __main__.py  api.py  cli.py  config.py  environments.json  installer.py  models.py  tui.py  utils.py
