[build-system]
requires = ["uv_build>=0.6.0,<0.7.0"]
build-backend = "uv_build"

[project]
name = "dtu-env"
version = "1.4.0"
description = "DTU course environment manager — install and manage conda environments for DTU courses"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "DTU Python Support", email = "pythonsupport@dtu.dk" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: System :: Installation/Setup",
]
dependencies = [
    "simple-term-menu>=1.6.0",
    "rich>=13.0",
]

[project.scripts]
dtu-env = "dtu_env.cli:main"

[project.urls]
Homepage = "https://pythonsupport.dtu.dk"
Repository = "https://github.com/philipnickel/dtu-env"
"Bug Tracker" = "https://github.com/philipnickel/dtu-env/issues"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/dtu_env/__init__.py:__version__"]
build_command = "pip install build && python -m build"

[tool.uv.build-backend]
source-include = ["src/dtu_env/environments.json", "src/dtu_env/environments/*.yml"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
    "requests>=2.28.0",
]
